[#3003] Fix layout issue with dismiss button
The dismiss button, the "X", got misaligned vertically bythe tooltip fix.

Adjusting the top position fixes this.

Also fixed the position of the arrow, although it's still not correct in firefox.

--- a/akvo/rsr/static/styles-src/main.scss
+++ b/akvo/rsr/static/styles-src/main.scss
@@ -4287,7 +4287,7 @@ main.results-page {
             &.edit-in-progress {
                 .closingBtn {
                     z-index: 999;
-                    top: -60px !important;
+                    top: -42px !important;
                 }
             }
         }
